# hakari-bench

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  pyproject.toml  tailwind.config.js
.github/workflows/: build-leaderboard-image.yml  ci.yml
config/: __init__.py
config/dataset_collections/: __init__.py  mnanobeir.yaml
config/datasets/: __init__.py  nanobeir_en.yaml  nanobirco.yaml  nanobright.yaml  nanobuiltbench.yaml  nanochemteb.yaml  nanocmteb.yaml  nanocoderag.yaml  nanocodesearchnet.yaml  nanocoir.yaml  nanodapfam.yaml  nanofamteb.yaml  nanofamteb_v2.yaml  nanoifir.yaml  nanoindicqa.yaml  nanojmteb.yaml  nanojmteb_v2.yaml  nanolaw.yaml  nanolongembed.yaml  nanomedical.yaml  nanomiracl.yaml  nanomldr.yaml  nanommteb.yaml  nanommteb_v2.yaml  nanomteb.yaml  nanomteb_chinese.yaml  nanomteb_dutch.yaml  nanomteb_french.yaml  nanomteb_german.yaml  nanomteb_japanese.yaml  nanomteb_korean.yaml  nanomteb_misc.yaml  nanomteb_persian.yaml  nanomteb_polish.yaml  nanomteb_russian.yaml  nanomteb_scandinavian.yaml  nanomteb_spanish.yaml  nanomteb_thai.yaml  nanomteb_v2.yaml  nanomteb_vietnamese.yaml  (+7 more)
config/model_cards/: Alibaba-NLP__gte-multilingual-base.yaml  Alibaba-NLP__gte-multilingual-reranker-base.yaml  BAAI__bge-m3.yaml  BAAI__bge-reranker-v2-m3.yaml  BAAI__bge-small-en-v1.5.yaml  HIT-TMG__KaLM-embedding-multilingual-mini-v1.yaml  KaLM-Embedding__KaLM-embedding-multilingual-mini-instruct-v2.5.yaml  Lajavaness__bilingual-embedding-base.yaml  Lajavaness__bilingual-embedding-small.yaml  LiquidAI__LFM2.5-ColBERT-350M.yaml  LiquidAI__LFM2.5-Embedding-350M.yaml  Qwen__Qwen3-Embedding-0.6B.yaml  Qwen__Qwen3-Embedding-4B.yaml  Qwen__Qwen3-Embedding-8B.yaml  Qwen__Qwen3-Reranker-0.6B.yaml  Snowflake__snowflake-arctic-embed-l-v2.0.yaml  __init__.py  answerdotai__answerai-colbert-small-v1.yaml  bm25.yaml  cl-nagoya__ruri-v3-30m.yaml  cl-nagoya__ruri-v3-310m.yaml  cl-nagoya__ruri-v3-reranker-310m.yaml  codefuse-ai__F2LLM-v2-160M.yaml  codefuse-ai__F2LLM-v2-330M.yaml  codefuse-ai__F2LLM-v2-80M.yaml  colbert-ir__colbertv2.0.yaml  cross-encoder__ettin-reranker-150m-v1.yaml  (+52 more)
config/viewer/: __init__.py  (+2 more)
docs/: NanoREADME.template.md  WIP_dataset_task_rename_candidates.md  batch_inference.md  benchmark_evaluation.md  benchmark_scope.md  contributing_results.md  core_set_selection.md  create_benchmark_tasks_document.md  create_mteb_nano_datasets.md  create_nano_datasets.md  custom_model_backends.md  dataset_citation_metadata.md  duckdb_schema.md  evaluation_policy.md  evaluation_runbook.md  huggingface_space_deploy.md  index.md  late_interaction_evaluation.md  leaderboard_metrics.md  model_cards.md  model_evaluation_workflow.md  model_specific_benchmarking_notes.md  new_model_results_workflow.md  openai_embedding_evaluation.md  quickstart.md  remove_legacy_schema.md  sentence_transformers_evaluation_integration.md  sentence_transformers_integration.md
hakari_bench/: __init__.py  batch.py  benchmark_docs.py  bm25.py  cli.py  cli_schema.py  config_schema.py  datasets.py  defaults.py  embedding_matrix.py  embedding_variants.py  evaluation.py  metadata.py  metrics.py  model_cards.py  model_loaders.py  model_protocols.py  models.py  nano_bm25_rebuild.py  nano_dataset_builder.py  results.py  scoring.py  task_docs.py  warehouse_schema.py
nano_ir_benchmark/: __init__.py  bm25.py  cli.py  datasets.py  embedding_variants.py  evaluation.py  metadata.py  metrics.py  models.py  results.py
scripts/: build_all_reranking_hybrid_nano_datasets.py  build_nanomteb_family_datasets.py  build_reranking_hybrid_nano_dataset.py  build_results_database_and_report.py  build_task_metadata_json.py  build_viewer_css.py  check_openai_embedding_dimensions.py  create_nano_dataset.py  estimate_openai_embedding_nanoset_costs.py  export_dataset_metadata.py  extract_benchmark_task_examples.py  generate_model_cards.py  generate_results_pr_template.py  generate_space_models_py.py  migrate_nanomteb_family_results.py  push_mteb_nano_datasets_to_hub.py  push_reranking_hybrid_nano_datasets.py  rebuild_mnanobeir_bm25.py  recreate_mteb_nano_datasets.py  recreate_nanomiracl_from_unified.py  recreate_nanomteb_datasets_from_mteb.py  sync_remote_results_and_rebuild.py  update_benchmark_task_candidate_metadata.py  update_dataset_language_detection.py  update_dataset_metadata_stats.py  update_reranking_hybrid_readmes.py  update_results_pr_body.py  upload_leaderboard_duckdb.py
tests/: test_batch.py  test_bm25.py  test_cli.py  test_create_nano_dataset_script.py  test_datasets.py  test_docs.py  test_evaluation.py  test_generate_results_pr_template.py  test_generate_space_models_py.py  test_metadata_tools.py  test_metrics.py  test_model_cards.py  test_models.py  test_nano_bm25_rebuild.py  test_nano_dataset_builder.py  test_nanomteb_family_dataset_builder.py  test_nanomteb_family_migration.py  test_openai_embedding_cost_estimator.py  test_push_mteb_nano_datasets_to_hub.py  test_push_reranking_hybrid_nano_datasets.py  test_rebuild_mnanobeir_bm25_script.py  test_reranking_hybrid_dataset_builder.py  test_results_database_report.py  test_scoring.py  test_security_config.py  test_sentence_transformers_examples.py  test_sentence_transformers_integration.py  test_sync_remote_results_and_rebuild.py  test_tei_embedding_backend.py  test_update_reranking_hybrid_readmes.py  test_update_results_pr_body.py  test_upload_leaderboard_duckdb.py  test_viewer.py  test_viewer_analytics.py  test_viewer_api.py  test_viewer_browser.py  test_viewer_data.py  test_viewer_docs.py  test_viewer_duckdb_performance.py  test_viewer_filters.py  (+6 more)
viewer-frontend/: index.html  package.json  vite.config.ts
(+1829 files in other folders)
