[project]
name = "nano-ir-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.6",
    "datasets>=4.8.4",
    "duckdb>=1.5.2",
    "fast-langdetect>=1.0.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3%2Bcu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
    "huggingface-hub>=1.12.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "peft>=0.19.1",
    "protobuf>=6.33.2",
    "pystemmer>=3.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sentence-transformers>=5,<6",
    "sentencepiece>=0.2.1",
    "torch>=2.9,<2.10",
    "transformers>=4,<6",
]

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
nano-ir-bench = "nano_ir_benchmark.cli:main"

[project.optional-dependencies]
wordseg = [
    "fugashi>=1.5.2",
    "jieba>=0.42.1",
    "kiwipiepy>=0.22.2",
    "pythainlp>=5.2.0",
    "unidic-lite>=1.0.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["nano_ir_benchmark*"]
exclude = ["config*", "tests*"]

[tool.uv]
package = true

[tool.uv.sources]
pylate = { path = "../../../lightonai/pylate", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "tox>=4.53.0",
    "tox-uv>=1.35.1",
    "ty>=0.0.32",
]
viewer = [
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.46.0",
]
all = [
    { include-group = "dev" },
    { include-group = "viewer" },
]
pylate = [
    "pylate",
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv>=1.29.0
parallel = auto
parallel_show_output = true
env_list = py312, lint, type

[testenv]
dependency_groups = all
commands = python -m pytest {posargs}

[testenv:lint]
commands = ruff check .

[testenv:type]
commands = ty check
"""
