[project]
name = "hakari-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.6",
    "datasets>=4.8.4",
    "duckdb>=1.5.2",
    "fast-langdetect>=1.0.0",
    "huggingface-hub>=0.34,<2",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "peft>=0.19.1",
    "protobuf>=6.33.2",
    "pydantic>=2.13.3",
    "pyarrow>=24.0.0",
    "pystemmer>=3.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4",
    "sentencepiece>=0.2.1",
    "torch>=2.9,<2.10",
    "transformers>=4.57,<6",
    "orjson>=3.11.5",
]

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
hakari-bench = "hakari_bench.cli:main"

[project.optional-dependencies]
wordseg = [
    "fugashi>=1.5.2",
    "jieba>=0.42.1",
    "kiwipiepy>=0.22.2",
    "pythainlp>=5.2.0",
    "pyvi>=0.1.1",
    "unidic-lite>=1.0.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "browser: headless browser tests that require Playwright and an installed browser",
]

[tool.setuptools.packages.find]
include = ["hakari_bench*", "config*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"hakari_bench.viewer" = ["assets/*"]
"config.datasets" = ["*.yaml"]
"config.dataset_collections" = ["*.yaml"]
"config.model_cards" = ["*.yaml"]
"config.viewer" = ["*.yaml"]

[tool.uv]
package = true
conflicts = [
    [
        { group = "pylate" },
        { group = "tf4-fa2" },
    ],
]
dependency-metadata = [
    { name = "pylate", version = "1.4.0", requires-dist = ["accelerate", "datasets", "fast-plaid", "fastkmeans", "ninja", "pandas", "sentence-transformers>=5.4", "transformers>=5,<6", "ujson"] },
]

[tool.uv.sources]
# Use the upstream Git source until PyPI metadata can resolve with this project.
# PyPI pylate==1.4.0 is the intended version, but its published metadata pins
# transformers<=4.56.2, which conflicts with this project's huggingface-hub>=1.12.0
# when uv resolves all supported extras and Python/platform splits. Remove this
# source override and change the pylate group to `pylate>=1.4.0` once a PyPI
# release relaxes that transformers cap, or if this project lowers its
# huggingface-hub constraint to match the PyPI metadata.
pylate = { git = "https://github.com/lightonai/pylate.git", rev = "1f1f47cee5df35ebe6fd2286a0a205a1523e4119" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "tox>=4.53.0",
    "tox-uv>=1.35.1",
    "ty>=0.0.32",
]
viewer = [
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.46.0",
]
all = [
    { include-group = "dev" },
    { include-group = "viewer" },
    { include-group = "viewer-browser-test" },
]
viewer-browser-test = [
    { include-group = "viewer" },
    "playwright>=1.57,<2",
    "pytest>=9.0.3",
]
pylate = [
    "pylate",
]
flash-attn = [
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3%2Bcu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl ; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]
tf4-fa2 = [
    { include-group = "flash-attn" },
    "transformers>=4.57,<5",
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv>=1.29.0
parallel = auto
parallel_show_output = true
env_list = py312, lint, type

[testenv]
dependency_groups = all
commands = python -m pytest {posargs}

[testenv:lint]
commands = ruff check .

[testenv:type]
commands = ty check
"""
